<resources>
    <string name="app_name">Mobikul POS - Point of Sale</string>
    <string name="new_version_available">There is a newer version of Mobikul POS application
        , please Update now?</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="never">Never</string>
    <string name="demo_app_popup">This is a demo application, all the data will reset after 1 hour.\n Do you want to see this message again?</string>
    <string name="loading">Loading...</string>
    <string name="wait_for_a_moment">Wait for a moment</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_splash_screen">Splash Screen Activity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_sign_up_sign_in">SignUpSignInActivity</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="_2014_copyright_brand_or_company_all_rights_reserved">© 2014 Copyright Brand or Company.\n All rights reserved.</string>
    <string name="search">Search</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="search_hint">Search Products</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="btm_nav_item_title_home">Home</string>
    <string name="btm_nav_item_title_orders">Orders</string>
    <string name="btm_nav_item_title_hold">Hold</string>
    <string name="btm_nav_item_title_more">More</string>
    <string name="press_back_to_exit">Press Back again to Exit.</string>
    <string name="home_fragment_title">Home</string>
    <string name="orders_fragment_title">Orders</string>
    <string name="hold_fragment_title">Hold</string>
    <string name="more_fragment_title">More</string>
    <string name="cash_drawer">Cash Drawer</string>
    <string name="sync_with_store">Sync with Store</string>
    <string name="sales_and_reporting">Sales and Reporting</string>
    <string name="my_account_info">My Account Info</string>
    <string name="customers">Customers</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="gift_card">Gift Card</string>
    <string name="discounts_and_cart_rules">Discounts and Cart Rules</string>
    <string name="taxes">Taxes</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="shipping_methods">Shipping Methods</string>
    <string name="pos_users">POS Users</string>
    <string name="user_roles">User Roles</string>
    <string name="quickly_manage">Quickly Manage</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_category">Categories</string>
    <string name="category_fragment_title">Category</string>
    <string name="add">Add</string>
    <string name="add_category_title">Add Category</string>
    <string name="edit_category_title">Edit Category</string>
    <string name="category_information">Category Information</string>
    <string name="category_name">Category Name</string>
    <string name="include_in_drawer_menu">Include in Drawer Menu</string>
    <string name="enable_category">Enable Category</string>
    <string name="title_activity_product">Products</string>
    <string name="product_image">Product Image</string>
    <string name="single_tap_to_remove_image">Single tap to open camera</string>
    <string name="general_information">General Information</string>
    <string name="sku">SKU</string>
    <string name="product_name">Product Name</string>
    <string name="add_product_title">Add Product</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="price">Price</string>
    <string name="yes_taxable_goods">Yes, Taxable Goods</string>
    <string name="inventory">Inventory</string>
    <string name="track_inventory">Track Inventory</string>
    <string name="quantity">Quantity</string>
    <string name="in_stock">In Stock</string>
    <string name="weight">Weight</string>
    <string name="choose_categories">Choose Categories</string>
    <string name="special_price">Special Price</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="in_stock_with_qty">%s - In Stock</string>
    <string name="enable_product">Enable Product</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_total">Order Subtotal - %s</string>
    <string name="order_total_">Order Subtotal</string>
    <string name="title_activity_cart">Cart</string>
    <string name="customer">Customer</string>
    <string name="apply_discount_code">Apply Discount Code</string>
    <string name="round_total">Round Total:</string>
    <string name="discount">Discount:</string>
    <string name="qty">QTY - %s</string>
    <string name="currency_symbol">$</string>
    <string name="sub_total">Sub-Total:</string>
    <string name="product_sub_total">Subtotal: %s</string>
    <string name="tax">Tax:</string>
    <string name="text_tax">Tax</string>
    <string name="grand_total">Grand Total:</string>
    <string name="confirm_and_accept_payment">Confirm and Accept Payment</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="total_to_be_paid">Total To Be Paid</string>
    <string name="total_to_be_refunded">Total To Be refunded</string>
    <string name="no_customer">No Customer Found</string>
    <string name="no_customer_secondary">There has been no customers yet.</string>
    <string name="your_bag_is_empty">Your bag is Empty!</string>
    <string name="add_products_to_your_cart_first">Add some products to your cart first.</string>
    <string name="no_products">No Products</string>
    <string name="no_products_available_yet">There are no products available yet.</string>
    <string name="no_category">No Categories</string>
    <string name="you_do_not_have_any_category_yet">You do not have any category yet.</string>
    <string name="no_category_subtitle">First create category to use this option.</string>
    <string name="no_order">No Orders</string>
    <string name="shop_first_to_see_your_orders_here">Shop first to see your orders here.</string>
    <string name="empty_hold_cart">No hold Cart</string>
    <string name="subtitle_hold_cart">There is nothing in your hold cart.</string>
    <string name="empty_payment_methods">No Payment Methods</string>
    <string name="empty_subtitle_payment_methods">There are no payment methods enabled or exist.</string>
    <string name="empty_cash_drawer">No Cash History</string>
    <string name="empty_subtitle_cash_drawer">There are no cash history found in your cash drawer.</string>
    <string name="no_options">No Options</string>
    <string name="no_options_values">No Options Values</string>
    <string name="you_do_not_have_any_option_yet">You do not have any option yet.</string>
    <string name="no_options_subtitle">First create product options to use.</string>
    <string name="no_options_values_subtitle">First add options values to use.</string>
    <string name="no_tax">No Options</string>
    <string name="you_do_not_have_any_taxes_yet">You do not have any taxes yet.</string>
    <string name="no_tax_subtitle">First create tax to use.</string>
    <string name="no_low_stock">No Low Stocks</string>
    <string name="no_low_stock_subtitle">All products are in stock.</string>
    <string name="title_activity_customer">Customers</string>
    <string name="customer_information">Customer Information</string>
    <string name="customer_name">Customer Name</string>
    <string name="contact">Contact</string>
    <string name="new_customer">New Customer</string>
    <string name="title_activity_choose_customer">ChooseCustomer</string>
    <string name="round_off">(Round Off)</string>
    <string name="cash_collected">Cash Collected (%s)</string>
    <string name="cash_refunded">Cash Refunded (%s)</string>
    <string name="cash_collected_">Cash Collected</string>
    <string name="cash_refunded_">Cash Refunded</string>
    <string name="add_custom_order_notes">Add Custom OrderEntity Notes</string>
    <string name="cash_fragment_title">Collect Cash</string>
    <string name="done">Done</string>
    <string name="change_due_">Change Due: %s</string>
    <string name="title_activity_place_order">PlaceOrderActivity</string>
    <string name="change_due">Change Due</string>
    <string name="print_invoice">Print Invoice</string>
    <string name="email_invoice">Email Invoice</string>
    <string name="back_to_home">Back to Home</string>
    <string name="order_id">Order #%s</string>
    <string name="return_order_id">Return Order #%s</string>
    <string name="title_activity_view_order_details">ViewOrderDetails</string>
    <string name="payment_information">Payment Information</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_my_account_info">Account Info</string>
    <string name="title_activity_walkthrough">WalkthroughActivity</string>
    <string name="welcome_to_webkul_stand_alone_pos">Welcome to Webkul Stand Alone POS</string>
    <string name="user_can_add_product_to_cart_by_simply_tab_and_by_search">User can add product to cart by simply tab and by search.</string>
    <string name="easily_manage_the_cart">Easily Manage the Cart</string>
    <string name="subheading_cart_wk_msg">You can easily Manage the Cart section.</string>
    <string name="many_options">Many Options</string>
    <string name="manage_customer_product_categoies_taxes_and_a_lot_more">Manage customer, product categoies, taxes and a lot more.</string>
    <string name="manage_products">Manage Products</string>
    <string name="simply_manage_the_all_types_of_products">Simply manage the all types of Products.</string>
    <string name="category_management">Category Management</string>
    <string name="you_can_simply_add_and_manage_the_categoies">You can simply add and manage the categoies.</string>
    <string name="personal_information">Personal Information</string>
    <string name="username">Username</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="hold_id">Hold #%s</string>
    <string name="export_database">Export Database</string>
    <string name="import_database">Import Database</string>
    <string name="db_exported">DB Exported</string>
    <string name="db_imported">DB Imported</string>
    <string name="subtitle_dp_imported">Your database has been imported successfully.</string>
    <string name="title_activity_payment_method">Payment Methods</string>
    <string name="apply_custom_discount">Apply Custom Discount</string>
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string-array name="type">
        
        <item>Radio</item>
        <item>Checkbox</item>
        <item>Text</item>
        <item>TextArea</item>
        <item>File</item>
        <item>Date</item>
        <item>Time</item>
        <item>Date &amp; Time</item>
        
        
        
    </string-array>
    <string name="option">Option</string>
    <string name="option_name">Option Name</string>
    <string name="option_values">Option Values</string>
    <string name="tax_name">Tax Name</string>
    <string name="enable_tax_rate">Enable Tax Rate</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="remove">Remove</string>
</resources>