<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parent_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/spacing_huge"
            android:scaleType="centerCrop"
            android:src="@drawable/wkt_screen_1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/spacing_max"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading"
                android:layout_width="@dimen/text_view_heading_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/category_management"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subheading"
                android:layout_width="@dimen/text_view_subheading_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/you_can_simply_add_and_manage_the_categoies"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/spacing_normal"
            android:text="@string/done"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            tools:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:padding="@dimen/spacing_normal"
            android:text="Skip >>"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:visibility="gone"
            tools:textColor="@color/colorAccent" />
    </RelativeLayout>
</layout>