<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.webkul.mobikul.mobikulstandalonepos.db.entity.Administrator" />

        <variable
            name="handler"
            type="com.webkul.mobikul.mobikulstandalonepos.handlers.SignUpSignInHandler" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context="com.webkul.mobikul.mobikulstandalonepos.fragment.SignInFragment">

        <!-- TODO: Update blank fragment layout -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:error="@{data.emailError}"
                    app:errorEnabled="@{data.displayError}">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:text="@={data.email}"
                        android:textColorHint="@color/gray" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/spacing_normal"
                    app:error="@{data.passwordError}"
                    app:errorEnabled="@{data.displayError}"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={data.password}"
                        android:textColorHint="@color/gray" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button"
                    style="@style/DefaultButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_done_light_wrapper"
                    android:drawableRight="@drawable/ic_done_light_wrapper"
                    android:onClick="@{()-> handler.signIn(data)}"
                    android:text="@string/sign_in" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </FrameLayout>
</layout>